dotnet/versioned_docs/version-1.19/api/class-browsertype.mdx
---
id: class-browsertype
title: "BrowserType"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

BrowserType provides methods to launch a specific browser instance or connect to an existing one. The following is a typical example of using Playwright to drive automation:

```csharp
using Microsoft.Playwright;
using System.Threading.Tasks;

class BrowserTypeExamples
{
    public static async Task Run()
    {
        using var playwright = await Playwright.CreateAsync();
        var chromium = playwright.Chromium;
        var browser = await chromium.LaunchAsync();
        var page = await browser.NewPageAsync();
        await page.GoToAsync("https://www.bing.com");
        // other actions
        await browser.CloseAsync();
    }
}
```


- [BrowserType.ConnectAsync(wsEndpoint, options)](./api/class-browsertype.mdx#browser-type-connect)
- [BrowserType.ConnectOverCDPAsync(endpointURL, options)](./api/class-browsertype.mdx#browser-type-connect-over-cdp)
- [BrowserType.ExecutablePath](./api/class-browsertype.mdx#browser-type-executable-path)
- [BrowserType.LaunchAsync(options)](./api/class-browsertype.mdx#browser-type-launch)
- [BrowserType.LaunchPersistentContextAsync(userDataDir, options)](./api/class-browsertype.mdx#browser-type-launch-persistent-context)
- [BrowserType.Name](./api/class-browsertype.mdx#browser-type-name)

## BrowserType.ConnectAsync(wsEndpoint, options) {#browser-type-connect}
- `wsEndpoint`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-ws-endpoint"/> &#60;[string]&#62; A browser websocket endpoint to connect to.<a href="#browser-type-connect-option-ws-endpoint" class="list-anchor">#</a>
- `options` &#60;`BrowserTypeConnectOptions?`&#62;
  - `Headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-headers"/> &#60;[IDictionary]?<[string], [string]>&#62; Additional HTTP headers to be sent with web socket connect request. Optional.<a href="#browser-type-connect-option-headers" class="list-anchor">#</a>
  - `SlowMo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-slow-mo"/> &#60;[double]?&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.<a href="#browser-type-connect-option-slow-mo" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-connect-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-return"/> &#60;[Browser]&#62;<a href="#browser-type-connect-return" class="list-anchor">#</a>

This methods attaches Playwright to an existing browser instance.

## BrowserType.ConnectOverCDPAsync(endpointURL, options) {#browser-type-connect-over-cdp}
- `endpointURL`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-endpoint-url"/> &#60;[string]&#62; A CDP websocket endpoint or http url to connect to. For example `http://localhost:9222/` or `ws://127.0.0.1:9222/devtools/browser/387adf4c-243f-4051-a181-46798f4a46f4`.<a href="#browser-type-connect-over-cdp-option-endpoint-url" class="list-anchor">#</a>
- `options` &#60;`BrowserTypeConnectOverCDPOptions?`&#62;
  - `Headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-headers"/> &#60;[IDictionary]?<[string], [string]>&#62; Additional HTTP headers to be sent with connect request. Optional.<a href="#browser-type-connect-over-cdp-option-headers" class="list-anchor">#</a>
  - `SlowMo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-slow-mo"/> &#60;[double]?&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.<a href="#browser-type-connect-over-cdp-option-slow-mo" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-connect-over-cdp-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-return"/> &#60;[Browser]&#62;<a href="#browser-type-connect-over-cdp-return" class="list-anchor">#</a>

This methods attaches Playwright to an existing browser instance using the Chrome DevTools Protocol.

The default browser context is accessible via [Browser.Contexts](./api/class-browser.mdx#browser-contexts).

:::note
Connecting over the Chrome DevTools Protocol is only supported for Chromium-based browsers.
:::

## BrowserType.ExecutablePath {#browser-type-executable-path}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-executable-path-return"/> &#60;[string]&#62;<a href="#browser-type-executable-path-return" class="list-anchor">#</a>

A path where Playwright expects to find a bundled browser executable.

## BrowserType.LaunchAsync(options) {#browser-type-launch}
- `options` &#60;`BrowserTypeLaunchOptions?`&#62;
  - `Args`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-args"/> &#60;[IEnumerable]?<[string]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).<a href="#browser-type-launch-option-args" class="list-anchor">#</a>
  - `Channel`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-channel"/> &#60;[string]?&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).<a href="#browser-type-launch-option-channel" class="list-anchor">#</a>
  - `ChromiumSandbox`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-chromium-sandbox"/> &#60;[bool]?&#62; Enable Chromium sandboxing. Defaults to `false`.<a href="#browser-type-launch-option-chromium-sandbox" class="list-anchor">#</a>
  - `Devtools`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-devtools"/> &#60;[bool]?&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.<a href="#browser-type-launch-option-devtools" class="list-anchor">#</a>
  - `DownloadsPath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-downloads-path"/> &#60;[string]?&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed. In either case, the downloads are deleted when the browser context they were created in is closed.<a href="#browser-type-launch-option-downloads-path" class="list-anchor">#</a>
  - `Env`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-env"/> &#60;[IDictionary]?<[string], [string]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.<a href="#browser-type-launch-option-env" class="list-anchor">#</a>
  - `ExecutablePath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-executable-path"/> &#60;[string]?&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.<a href="#browser-type-launch-option-executable-path" class="list-anchor">#</a>
  - `FirefoxUserPrefs`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-firefox-user-prefs"/> &#60;[IDictionary]?<[string], [object]>&#62; Firefox user preferences. Learn more about the Firefox user preferences at [`about:config`](https://support.mozilla.org/en-US/kb/about-config-editor-firefox).<a href="#browser-type-launch-option-firefox-user-prefs" class="list-anchor">#</a>
  - `HandleSIGHUP`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-handle-sighup"/> &#60;[bool]?&#62; Close the browser process on SIGHUP. Defaults to `true`.<a href="#browser-type-launch-option-handle-sighup" class="list-anchor">#</a>
  - `HandleSIGINT`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-handle-sigint"/> &#60;[bool]?&#62; Close the browser process on Ctrl-C. Defaults to `true`.<a href="#browser-type-launch-option-handle-sigint" class="list-anchor">#</a>
  - `HandleSIGTERM`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-handle-sigterm"/> &#60;[bool]?&#62; Close the browser process on SIGTERM. Defaults to `true`.<a href="#browser-type-launch-option-handle-sigterm" class="list-anchor">#</a>
  - `Headless`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-headless"/> &#60;[bool]?&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.<a href="#browser-type-launch-option-headless" class="list-anchor">#</a>
  - `IgnoreAllDefaultArgs`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-ignore-all-default-args"/> &#60;[bool]?&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care. Defaults to `false`.<a href="#browser-type-launch-option-ignore-all-default-args" class="list-anchor">#</a>
  - `IgnoreDefaultArgs`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-ignore-default-args"/> &#60;[IEnumerable]?<[string]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care.<a href="#browser-type-launch-option-ignore-default-args" class="list-anchor">#</a>
  - `Proxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-proxy"/> &#60;Proxy?&#62; Network proxy settings.<a href="#browser-type-launch-option-proxy" class="list-anchor">#</a>
    - `Server` &#60;[string]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `Bypass` &#60;[string]?&#62; Optional comma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `Username` &#60;[string]?&#62; Optional username to use if HTTP proxy requires authentication.
    - `Password` &#60;[string]?&#62; Optional password to use if HTTP proxy requires authentication.
  - `SlowMo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-slow-mo"/> &#60;[double]?&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.<a href="#browser-type-launch-option-slow-mo" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-launch-option-timeout" class="list-anchor">#</a>
  - `TracesDir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-traces-dir"/> &#60;[string]?&#62; If specified, traces are saved into this directory.<a href="#browser-type-launch-option-traces-dir" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-return"/> &#60;[Browser]&#62;<a href="#browser-type-launch-return" class="list-anchor">#</a>

Returns the browser instance.

You can use `ignoreDefaultArgs` to filter out `--mute-audio` from default arguments:

```csharp
var browser = await playwright.Chromium.LaunchAsync(new BrowserTypeLaunchOptions {
    IgnoreDefaultArgs = new[] { "--mute-audio" }
})
```

> **Chromium-only** Playwright can also be used to control the Google Chrome or Microsoft Edge browsers, but it works best with the version of Chromium it is bundled with. There is no guarantee it will work with any other version. Use `executablePath` option with extreme caution.
>
> If Google Chrome (rather than Chromium) is preferred, a [Chrome Canary](https://www.google.com/chrome/browser/canary.html) or [Dev Channel](https://www.chromium.org/getting-involved/dev-channel) build is suggested.
>
> Stock browsers like Google Chrome and Microsoft Edge are suitable for tests that require proprietary media codecs for video playback. See [this article](https://www.howtogeek.com/202825/what%E2%80%99s-the-difference-between-chromium-and-chrome/) for other differences between Chromium and Chrome. [This article](https://chromium.googlesource.com/chromium/src/+/lkgr/docs/chromium_browser_vs_google_chrome.md) describes some differences for Linux users.

## BrowserType.LaunchPersistentContextAsync(userDataDir, options) {#browser-type-launch-persistent-context}
- `userDataDir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-user-data-dir"/> &#60;[string]&#62; Path to a User Data Directory, which stores browser session data like cookies and local storage. More details for [Chromium](https://chromium.googlesource.com/chromium/src/+/master/docs/user_data_dir.md#introduction) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Command_Line_Options#User_Profile). Note that Chromium's user data directory is the **parent** directory of the "Profile Path" seen at `chrome://version`. Pass an empty string to use a temporary directory instead.<a href="#browser-type-launch-persistent-context-option-user-data-dir" class="list-anchor">#</a>
- `options` &#60;`BrowserTypeLaunchPersistentContextOptions?`&#62;
  - `AcceptDownloads`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-accept-downloads"/> &#60;[bool]?&#62; Whether to automatically download all the attachments. Defaults to `true` where all the downloads are accepted.<a href="#browser-type-launch-persistent-context-option-accept-downloads" class="list-anchor">#</a>
  - `Args`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-args"/> &#60;[IEnumerable]?<[string]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).<a href="#browser-type-launch-persistent-context-option-args" class="list-anchor">#</a>
  - `BaseURL`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-base-url"/> &#60;[string]?&#62; When using [Page.GotoAsync(url, options)](./api/class-page.mdx#page-goto), [Page.RouteAsync(url, handler, options)](./api/class-page.mdx#page-route), [Page.WaitForURLAsync(url, options)](./api/class-page.mdx#page-wait-for-url), [Page.RunAndWaitForRequestAsync(action, urlOrPredicate, options)](./api/class-page.mdx#page-wait-for-request), or [Page.RunAndWaitForResponseAsync(action, urlOrPredicate, options)](./api/class-page.mdx#page-wait-for-response) it takes the base URL in consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:<a href="#browser-type-launch-persistent-context-option-base-url" class="list-anchor">#</a>
    * baseURL: `http://localhost:3000` and navigating to `/bar.html` results in `http://localhost:3000/bar.html`
    * baseURL: `http://localhost:3000/foo/` and navigating to `./bar.html` results in `http://localhost:3000/foo/bar.html`
    * baseURL: `http://localhost:3000/foo` (without trailing slash) and navigating to `./bar.html` results in `http://localhost:3000/bar.html`
  - `BypassCSP`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-bypass-csp"/> &#60;[bool]?&#62; Toggles bypassing page's Content-Security-Policy.<a href="#browser-type-launch-persistent-context-option-bypass-csp" class="list-anchor">#</a>
  - `Channel`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-channel"/> &#60;[string]?&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).<a href="#browser-type-launch-persistent-context-option-channel" class="list-anchor">#</a>
  - `ChromiumSandbox`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-chromium-sandbox"/> &#60;[bool]?&#62; Enable Chromium sandboxing. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-chromium-sandbox" class="list-anchor">#</a>
  - `ColorScheme`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-color-scheme"/> &#60;`enum ColorScheme { Light, Dark, NoPreference }?`&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [Page.EmulateMediaAsync(options)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.<a href="#browser-type-launch-persistent-context-option-color-scheme" class="list-anchor">#</a>
  - `DeviceScaleFactor`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-device-scale-factor"/> &#60;[double]?&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.<a href="#browser-type-launch-persistent-context-option-device-scale-factor" class="list-anchor">#</a>
  - `Devtools`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-devtools"/> &#60;[bool]?&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.<a href="#browser-type-launch-persistent-context-option-devtools" class="list-anchor">#</a>
  - `DownloadsPath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-downloads-path"/> &#60;[string]?&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed. In either case, the downloads are deleted when the browser context they were created in is closed.<a href="#browser-type-launch-persistent-context-option-downloads-path" class="list-anchor">#</a>
  - `Env`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-env"/> &#60;[IDictionary]?<[string], [string]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.<a href="#browser-type-launch-persistent-context-option-env" class="list-anchor">#</a>
  - `ExecutablePath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-executable-path"/> &#60;[string]?&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.<a href="#browser-type-launch-persistent-context-option-executable-path" class="list-anchor">#</a>
  - `ExtraHTTPHeaders`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-extra-http-headers"/> &#60;[IDictionary]?<[string], [string]>&#62; An object containing additional HTTP headers to be sent with every request.<a href="#browser-type-launch-persistent-context-option-extra-http-headers" class="list-anchor">#</a>
  - `ForcedColors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-forced-colors"/> &#60;`enum ForcedColors { Active, None }?`&#62; Emulates `'forced-colors'` media feature, supported values are `'active'`, `'none'`. See [Page.EmulateMediaAsync(options)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'none'`.<a href="#browser-type-launch-persistent-context-option-forced-colors" class="list-anchor">#</a>

    :::note
    It's not supported in WebKit, see [here](https://bugs.webkit.org/show_bug.cgi?id=225281) in their issue tracker.
    :::

  - `Geolocation`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-geolocation"/> &#60;Geolocation?&#62;<a href="#browser-type-launch-persistent-context-option-geolocation" class="list-anchor">#</a>
    - `Latitude` &#60;[double]&#62; Latitude between -90 and 90.
    - `Longitude` &#60;[double]&#62; Longitude between -180 and 180.
    - `Accuracy` &#60;[double]?&#62; Non-negative accuracy value. Defaults to `0`.
  - `HandleSIGHUP`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-handle-sighup"/> &#60;[bool]?&#62; Close the browser process on SIGHUP. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-handle-sighup" class="list-anchor">#</a>
  - `HandleSIGINT`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-handle-sigint"/> &#60;[bool]?&#62; Close the browser process on Ctrl-C. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-handle-sigint" class="list-anchor">#</a>
  - `HandleSIGTERM`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-handle-sigterm"/> &#60;[bool]?&#62; Close the browser process on SIGTERM. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-handle-sigterm" class="list-anchor">#</a>
  - `HasTouch`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-has-touch"/> &#60;[bool]?&#62; Specifies if viewport supports touch events. Defaults to false.<a href="#browser-type-launch-persistent-context-option-has-touch" class="list-anchor">#</a>
  - `Headless`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-headless"/> &#60;[bool]?&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.<a href="#browser-type-launch-persistent-context-option-headless" class="list-anchor">#</a>
  - `HttpCredentials`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-http-credentials"/> &#60;HttpCredentials?&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).<a href="#browser-type-launch-persistent-context-option-http-credentials" class="list-anchor">#</a>
    - `Username` &#60;[string]&#62;
    - `Password` &#60;[string]&#62;
  - `IgnoreAllDefaultArgs`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-ignore-all-default-args"/> &#60;[bool]?&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-ignore-all-default-args" class="list-anchor">#</a>
  - `IgnoreDefaultArgs`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-ignore-default-args"/> &#60;[IEnumerable]?<[string]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care.<a href="#browser-type-launch-persistent-context-option-ignore-default-args" class="list-anchor">#</a>
  - `IgnoreHTTPSErrors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-ignore-https-errors"/> &#60;[bool]?&#62; Whether to ignore HTTPS errors when sending network requests. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-ignore-https-errors" class="list-anchor">#</a>
  - `IsMobile`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-is-mobile"/> &#60;[bool]?&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.<a href="#browser-type-launch-persistent-context-option-is-mobile" class="list-anchor">#</a>
  - `JavaScriptEnabled`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-java-script-enabled"/> &#60;[bool]?&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-java-script-enabled" class="list-anchor">#</a>
  - `Locale`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-locale"/> &#60;[string]?&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.<a href="#browser-type-launch-persistent-context-option-locale" class="list-anchor">#</a>
  - `Offline`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-offline"/> &#60;[bool]?&#62; Whether to emulate network being offline. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-offline" class="list-anchor">#</a>
  - `Permissions`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-permissions"/> &#60;[IEnumerable]?<[string]>&#62; A list of permissions to grant to all pages in this context. See [BrowserContext.GrantPermissionsAsync(permissions, options)](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.<a href="#browser-type-launch-persistent-context-option-permissions" class="list-anchor">#</a>
  - `Proxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-proxy"/> &#60;Proxy?&#62; Network proxy settings.<a href="#browser-type-launch-persistent-context-option-proxy" class="list-anchor">#</a>
    - `Server` &#60;[string]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `Bypass` &#60;[string]?&#62; Optional comma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `Username` &#60;[string]?&#62; Optional username to use if HTTP proxy requires authentication.
    - `Password` &#60;[string]?&#62; Optional password to use if HTTP proxy requires authentication.
  - `RecordHarOmitContent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-har-omit-content"/> &#60;[bool]?&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-record-har-omit-content" class="list-anchor">#</a>
  - `RecordHarPath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-har-path"/> &#60;[string]?&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [BrowserContext.CloseAsync()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.<a href="#browser-type-launch-persistent-context-option-record-har-path" class="list-anchor">#</a>
  - `RecordVideoDir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-video-dir"/> &#60;[string]?&#62; Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [BrowserContext.CloseAsync()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.<a href="#browser-type-launch-persistent-context-option-record-video-dir" class="list-anchor">#</a>
  - `RecordVideoSize`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-video-size"/> &#60;RecordVideoSize?&#62; Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.<a href="#browser-type-launch-persistent-context-option-record-video-size" class="list-anchor">#</a>
    - `Width` &#60;[int]&#62; Video frame width.
    - `Height` &#60;[int]&#62; Video frame height.
  - `ReducedMotion`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-reduced-motion"/> &#60;`enum ReducedMotion { Reduce, NoPreference }?`&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [Page.EmulateMediaAsync(options)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.<a href="#browser-type-launch-persistent-context-option-reduced-motion" class="list-anchor">#</a>
  - `ScreenSize`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-screen"/> &#60;ScreenSize?&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.<a href="#browser-type-launch-persistent-context-option-screen" class="list-anchor">#</a>
    - `Width` &#60;[int]&#62; page width in pixels.
    - `Height` &#60;[int]&#62; page height in pixels.
  - `SlowMo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-slow-mo"/> &#60;[double]?&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.<a href="#browser-type-launch-persistent-context-option-slow-mo" class="list-anchor">#</a>
  - `StrictSelectors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-strict-selectors"/> &#60;[bool]?&#62; It specified, enables strict selectors mode for this context. In the strict selectors mode all operations on selectors that imply single target DOM element will throw when more than one element matches the selector. See [Locator] to learn more about the strict mode.<a href="#browser-type-launch-persistent-context-option-strict-selectors" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-launch-persistent-context-option-timeout" class="list-anchor">#</a>
  - `TimezoneId`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-timezone-id"/> &#60;[string]?&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.<a href="#browser-type-launch-persistent-context-option-timezone-id" class="list-anchor">#</a>
  - `TracesDir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-traces-dir"/> &#60;[string]?&#62; If specified, traces are saved into this directory.<a href="#browser-type-launch-persistent-context-option-traces-dir" class="list-anchor">#</a>
  - `UserAgent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-user-agent"/> &#60;[string]?&#62; Specific user agent to use in this context.<a href="#browser-type-launch-persistent-context-option-user-agent" class="list-anchor">#</a>
  - `ViewportSize`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-viewport"/> &#60;ViewportSize?&#62; Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. Use `ViewportSize.NoViewport` to disable the default viewport.<a href="#browser-type-launch-persistent-context-option-viewport" class="list-anchor">#</a>
    - `Width` &#60;[int]&#62; page width in pixels.
    - `Height` &#60;[int]&#62; page height in pixels.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-return"/> &#60;[BrowserContext]&#62;<a href="#browser-type-launch-persistent-context-return" class="list-anchor">#</a>

Returns the persistent browser context instance.

Launches browser that uses persistent storage located at `userDataDir` and returns the only context. Closing this context will automatically close the browser.

## BrowserType.Name {#browser-type-name}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-name-return"/> &#60;[string]&#62;<a href="#browser-type-name-return" class="list-anchor">#</a>

Returns browser name. For example: `'chromium'`, `'webkit'` or `'firefox'`.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
